// Prisma schema for MIN-5-TIME-300
// PostgreSQL 사용

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id               String   @id @default(uuid())
  email            String   @unique
  passwordHash     String
  username         String
  mbti             String?
  createdAt        DateTime @default(now())
  updatedAt        DateTime @updatedAt
  isActive         Boolean  @default(true)
  profileImageUrl  String?
  interests        UserInterest[]
  lifestyleAnswers LifestyleAnswer[]
  journals         Journal[]
  recordScores     RecordScore[]
  sentMessages     Message[]        @relation("SentMessages")
  friendsRequested Friend[]         @relation("FriendsRequested")
  friendsReceived  Friend[]         @relation("FriendsReceived")
  communityComments CommunityComment[]
  journalReactions JournalReaction[]
  chatRoomParticipants ChatRoomParticipant[]
  notificationSettings NotificationSettings?
}

model UserInterest {
  id        String   @id @default(uuid())
  user      User     @relation(fields: [userId], references: [id])
  userId    String
  interest  String
  priority  Int
  createdAt DateTime @default(now())
}

model LifestyleAnswer {
  id        String   @id @default(uuid())
  user      User     @relation(fields: [userId], references: [id])
  userId    String
  question  String
  answer    String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Journal {
  id              String            @id @default(uuid())
  user            User              @relation(fields: [userId], references: [id])
  userId          String
  content         String
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt
  isPublic        Boolean  @default(false)
  emotionScore    Int
  mediaUrl        String?
  mediaType       String?
  writingDuration Int
  question        JournalQuestion?
  reactions       JournalReaction[]
  communityComments CommunityComment[]
}

model JournalQuestion {
  id         String   @id @default(uuid())
  journal    Journal  @relation(fields: [journalId], references: [id])
  journalId  String   @unique
  question   String
  createdAt  DateTime @default(now())
}

model JournalReaction {
  id           String   @id @default(uuid())
  journal      Journal  @relation(fields: [journalId], references: [id])
  journalId    String
  user         User     @relation(fields: [userId], references: [id])
  userId       String
  // User.journalReactions와 연결
  reactionType String
  createdAt    DateTime @default(now())
}

model RecordScore {
  id                String   @id @default(uuid())
  user              User     @relation(fields: [userId], references: [id])
  userId            String
  consistencyScore  Int
  emotionVariance   Int
  writingQuality    Int
  periodStart       DateTime
  periodEnd         DateTime
}

model Friend {
  id           String   @id @default(uuid())
  requester    User     @relation("FriendsRequested", fields: [requesterId], references: [id])
  requesterId  String
  addressee    User     @relation("FriendsReceived", fields: [addresseeId], references: [id])
  addresseeId  String
  status       String
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt
}

model ChatRoom {
  id           String   @id @default(uuid())
  name         String
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt
  participants ChatRoomParticipant[]
  messages     Message[]
}

model ChatRoomParticipant {
  id           String   @id @default(uuid())
  chatRoom     ChatRoom @relation(fields: [chatRoomId], references: [id])
  chatRoomId   String
  user         User     @relation(fields: [userId], references: [id])
  userId       String
  // User.chatRoomParticipants와 연결
  joinedAt     DateTime @default(now())
  lastReadAt   DateTime?
}

model Message {
  id           String   @id @default(uuid())
  chatRoom     ChatRoom @relation(fields: [chatRoomId], references: [id])
  chatRoomId   String
  sender       User     @relation("SentMessages", fields: [senderId], references: [id])
  senderId     String
  content      String
  createdAt    DateTime @default(now())
  isRead       Boolean  @default(false)
}

model CommunityComment {
  id           String   @id @default(uuid())
  journal      Journal  @relation(fields: [journalId], references: [id])
  journalId    String
  user         User     @relation(fields: [userId], references: [id])
  userId       String
  content      String
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt
}


model NotificationSettings {
  id        String   @id @default(uuid())
  user      User     @relation(fields: [userId], references: [id])
  userId    String   @unique
  email                     Boolean  @default(true)
  push                      Boolean  @default(true)
  sms                       Boolean  @default(false)
  reminderEnabled           Boolean  @default(true)
  reminderTime              String?
  friendRequestNotification Boolean  @default(true)
  commentNotification       Boolean  @default(true)
  reactionNotification      Boolean  @default(true)
  messageNotification       Boolean  @default(true)
  createdAt                 DateTime @default(now())
  updatedAt                 DateTime @updatedAt
}
